--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,66 @@
+altgraph==0.17
+appdirs==1.4.4
+arena==0.0.5
+attrs==20.1.0
+autopep8==1.5.4
+black==20.8b0
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.1
+cycler==0.10.0
+distlib==0.3.1
+filelock==3.0.12
+flake8==3.8.3
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+geographiclib==1.50
+geopy==2.0.0
+google-api-python-client==1.7.8
+google-auth==1.20.1
+google-auth-httplib2==0.0.4
+httplib2==0.12.1
+idna==2.10
+iniconfig==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+kiwisolver==1.2.0
+macholib==1.14
 MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.4.0
+mypy-extensions==0.4.3
+numpy==1.19.1
+oauth2client==4.1.3
+packaging==20.4
+pathspec==0.8.0
+pick==0.6.4
+Pillow==7.2.0
+pluggy==0.13.1
+prettytable==0.7.2
+py==1.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pyfiglet==0.8.post1
+pyflakes==2.2.0
+pyinstaller==4.0
+pyinstaller-hooks-contrib==2020.7
 pymongo==3.11.0
+pyparsing==2.4.7
+pytest==6.0.1
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+pytz==2020.1
+regex==2020.7.14
+requests==2.24.0
+rsa==4.6
+six==1.15.0
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+uritemplate==3.0.1
+urllib3==1.25.10
+virtualenv==20.0.31
 Werkzeug==1.0.1
