--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ geopy==2.0.0
 google-api-python-client==1.7.8
 google-auth==1.20.1
 google-auth-httplib2==0.0.4
+gunicorn==20.0.4
 httplib2==0.12.1
 idna==2.10
 iniconfig==1.0.1
